# wikipedia-article-generator

./: .gitignore  README.md  agents.py  article.md  article.py  crew.py  crewaidocumentation.txt  gemini_llm.py  index.html  main.py  pyproject.toml  requirements.txt  wikipedia_search_tool.py
knowledge/: user_preference.txt
src/wikipedia_article_generator/: api.py  crew.py  main.py
src/wikipedia_article_generator/config/: agents.yaml  tasks.yaml
src/wikipedia_article_generator/tools/: wikipedia_search_tool.py
